Update print statement from 'Hello' to 'Goodbye'

--- a/project.html
+++ b/project.html
@@ -692,7 +692,7 @@ INSERT INTO tasks (title, is_completed) VALUES ('Créer un frontend en HTML', TR
                 description: `<p>Ce projet est une démonstration interactive de 10 styles de design UX/UI distincts, chacun implémenté en HTML et CSS. Plutôt qu'un simple prototype Figma, cette page présente des mises en page fonctionnelles et stylisées, allant du minimalisme élégant au brutalisme audacieux. Chaque section explique les principes de conception UX et les techniques CSS utilisées pour y parvenir.</p><p><strong>Compétences :</strong> HTML5, CSS3, Design UX/UI, Responsive Design, Principes de Gestalt.</p>`, 
                 imageUrl: 'images/ux_design.jpg',
                 certLink: 'https://coursera.org/verify/professional-cert/6R8451VM3CQ5', 
-                simLink: '/ux_design.html',
+                simLink: 'ux_design.html',
                 simulationContent: `
                     <h3>Contenu : Processus de Design UX</h3>
                     <p>Le design UX est un processus structuré. Pour ce projet d'application de réservation, j'ai suivi les étapes suivantes pour garantir que la solution réponde aux vrais besoins des utilisateurs.</p>
@@ -1738,3 +1738,4 @@ print("[*] Script de génération PDF prêt.")
 </body>
 
 </html>
+
