--- a/index.html
+++ b/index.html
@@ -665,9 +665,9 @@
                 <h2 class="section-title">Contactez-Moi</h2>
                 <p id="contact-intro">Vous avez une question ou une proposition ? N'hésitez pas à m'envoyer un message.</p>
                 <form id="contactForm" action="https://api.web3forms.com/submit" method="POST">
-                    <input type="hidden" name="access_key" value="YOUR_WEB3FORMS_ACCESS_KEY">
+                    <input type="hidden" name="access_key" value="37343818-9e62-4fa8-b533-ae3dc4ff25c4">
                     <div class="form-group">
-                        <input type="text" name="name" placeholder="Patrick safari" required>
+                        <input type="text" name="name" placeholder="Votre Nom" required>
                         <input type="email" name="email" placeholder="Votre Email" required>
                     </div>
                     <div class="form-group">
